--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
